feat: Update SeaWallet components with new styles and content; add MemberIntro and page components

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,8 +1,9 @@
 ---
 // import Globe1 from "./globe.vue";
 import Globe from "./Globe";
-import Page1 from "./Welcome/page1.astro";
-import Page2 from "./Welcome/page2.astro";
+import Page1 from "./Pages/page1.astro";
+import Page2 from "./Pages/page2.astro";
+import Page3 from "./Pages/page3.astro";
 ---
 
 <div class="">
@@ -13,6 +14,8 @@ import Page2 from "./Welcome/page2.astro";
   <div class="min-h-screen">
     <Page2/>
   </div>
-  <div class="min-h-screen">d</div>
+  <div class="min-h-screen">
+    <Page3/>
+  </div>
   <!-- <Globe1 client:load className="-z-10" /> -->
 </div>
