feat: Add SVG icons for X, GitHub, and mail; implement footer and slogan components

--- a/src/components/Pages/page1.astro
+++ b/src/components/Pages/page1.astro
@@ -6,5 +6,5 @@
         <h1 class="text-6xl font-bold mb-4">Zzyzx Lab</h1>
         <p>One of the last frontiers in technology.</p>
     </div>
-    <div class="h-screen w-screen absolute bottom-0 left-0 bg-linear-to-b from-transparent to-black/50 pointer-events-none"></div>
+    <div class="h-screen w-full absolute bottom-0 left-0 bg-linear-to-b from-transparent to-black/50 pointer-events-none"></div>
 </div>
