--- a/src/components/Pages/page3.astro
+++ b/src/components/Pages/page3.astro
@@ -1,6 +1,6 @@
 ---
 import MemberIntro from "../Member/MemberIntro.vue";
 ---
-<div class="w-screen h-[200vh] flex justify-center">
+<div class="w-full h-[200vh] flex justify-center">
 <MemberIntro client:load/>
 </div>
