--- a/src/components/Pages/page1.astro
+++ b/src/components/Pages/page1.astro
@@ -1,10 +1,48 @@
 ---
 
 ---
+
 <div class="relative h-[200vh] w-full">
-    <div class="h-screen overflow-hidden flex flex-col items-center justify-center sticky top-0">
-        <h1 class="text-6xl font-bold mb-4">Zzyzx Lab</h1>
-        <p>One of the last frontiers in technology.</p>
+    <div
+        class="h-screen overflow-hidden flex flex-col items-center justify-center sticky top-0"
+    >
+        <h1 class="text-8xl font-bold mb-4">Zzyzx Lab</h1>
+        <p
+            class="text-2xl font-mono border-r-2 border-white overflow-hidden whitespace-nowrap animate-typewriter w-0"
+        >
+            One of the lastest frontiers in technology.
+        </p>
     </div>
-    <div class="h-screen w-full absolute bottom-0 left-0 bg-linear-to-b from-transparent to-black/50 pointer-events-none"></div>
+
+    <style>
+        .animate-typewriter {
+            animation:
+                typing 3.8s steps(41) forwards,
+                blink-caret 0.75s step-end infinite;
+        }
+
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+            to {
+                width: 41ch;
+            }
+        }
+
+        @keyframes blink-caret {
+            from,
+            to {
+                border-color: transparent;
+            }
+            50% {
+                border-color: #555;
+            }
+        }
+    </style>
+
+    <div
+        class="h-screen w-full absolute bottom-0 left-0 bg-linear-to-b from-transparent to-black/50 pointer-events-none"
+    >
+    </div>
 </div>
