--- a/src/components/Pages/page1.astro
+++ b/src/components/Pages/page1.astro
@@ -4,6 +4,7 @@ import Service from "../Service/service.vue";
 ---
 
 <div
+    id="home"
     class="w-full min-h-screen flex items-center justify-center relative py-20 px-4"
 >
     <!-- Main Grid Layout -->
