--- a/src/components/Pages/page1.astro
+++ b/src/components/Pages/page1.astro
@@ -55,7 +55,7 @@ import Service from "../Service/service.vue";
 
     <!-- Background Gradient Fade -->
     <div
-        class="absolute bottom-0 left-0 w-full h-64 bg-gradient-to-t from-bg-base to-transparent pointer-events-none"
+        class="absolute bottom-0 left-0 w-full h-64 bg-linear-to-t from-bg-base to-transparent pointer-events-none"
     >
     </div>
 
